Bug 229526 Don't trim whitespace in <label> <description> or non-XUL r/sr=hyatt